// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultipleChoice > renders default as expected 1`] = `
<div>
  <form
    class="multiple-choice container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="multiple-choice__header flex flex-col gap-4"
    >
      <div
        class="multiple-choice__header-content flex flex-col gap-2"
      >
        <p
          class="multiple-choice__title bluedot-h4 not-prose"
        >
          Understanding LLMs
        </p>
        <div
          class="markdown-extended-renderer prose prose-p:text-[16px] prose-li:text-[16px] prose-p:leading-[160%] prose-li:leading-[160%] prose-p:tracking-[-0.002em] prose-li:tracking-[-0.002em] prose-p:font-normal prose-li:font-normal prose-p:font-sans prose-li:font-sans prose-strong:font-sans prose-strong:font-semibold prose-strong:text-[16px] prose-strong:leading-[160%] prose-strong:tracking-[-0.002em] prose-a:font-normal prose-a:underline max-w-none multiple-choice__description"
        >
          <p>
            Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
          </p>
        </div>
      </div>
    </div>
    <div
      class="multiple-choice__options flex flex-col gap-2"
    >
      <label
        class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              container-lined"
      >
        <input
          class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
          disabled=""
          name="answer"
          type="radio"
          value="The community's preference for low-tech fishing traditions"
        />
        <span
          class="input__label"
        >
          The community's preference for low-tech fishing traditions
        </span>
      </label>
      <label
        class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              container-lined"
      >
        <input
          class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
          disabled=""
          name="answer"
          type="radio"
          value="Rising consumer demand for fish with more Omega-3s"
        />
        <span
          class="input__label"
        >
          Rising consumer demand for fish with more Omega-3s
        </span>
      </label>
      <label
        class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              container-lined"
      >
        <input
          class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
          disabled=""
          name="answer"
          type="radio"
          value="Environmental regulations and declining cod stocks"
        />
        <span
          class="input__label"
        >
          Environmental regulations and declining cod stocks
        </span>
      </label>
      <label
        class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              container-lined"
      >
        <input
          class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
          disabled=""
          name="answer"
          type="radio"
          value="A cultural shift toward vegetarianism in the region"
        />
        <span
          class="input__label"
        >
          A cultural shift toward vegetarianism in the region
        </span>
      </label>
    </div>
    <a
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark multiple-choice__login-cta"
      href="http://localhost:3000/login?register=true&redirect_to=%2Ftest-path"
      tabindex="0"
    >
      <span
        class="cta-button__text"
      >
        Create a free account to check your answer
      </span>
      <span
        class="cta-button__chevron ml-3"
      >
        <svg
          class="cta-button__chevron-icon size-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          />
        </svg>
      </span>
    </a>
  </form>
</div>
`;

exports[`MultipleChoice > renders logged in as expected 1`] = `
<div>
  <form
    class="multiple-choice container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="multiple-choice__header flex flex-col gap-4"
    >
      <div
        class="multiple-choice__header-content flex flex-col gap-2"
      >
        <p
          class="multiple-choice__title bluedot-h4 not-prose"
        >
          Understanding LLMs
        </p>
        <div
          class="markdown-extended-renderer prose prose-p:text-[16px] prose-li:text-[16px] prose-p:leading-[160%] prose-li:leading-[160%] prose-p:tracking-[-0.002em] prose-li:tracking-[-0.002em] prose-p:font-normal prose-li:font-normal prose-p:font-sans prose-li:font-sans prose-strong:font-sans prose-strong:font-semibold prose-strong:text-[16px] prose-strong:leading-[160%] prose-strong:tracking-[-0.002em] prose-a:font-normal prose-a:underline max-w-none multiple-choice__description"
        >
          <p>
            Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
          </p>
        </div>
      </div>
    </div>
    <div
      class="multiple-choice__options flex flex-col gap-2"
    >
      <label
        class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              container-lined"
      >
        <input
          class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
          name="answer"
          type="radio"
          value="The community's preference for low-tech fishing traditions"
        />
        <span
          class="input__label"
        >
          The community's preference for low-tech fishing traditions
        </span>
      </label>
      <label
        class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              container-lined"
      >
        <input
          class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
          name="answer"
          type="radio"
          value="Rising consumer demand for fish with more Omega-3s"
        />
        <span
          class="input__label"
        >
          Rising consumer demand for fish with more Omega-3s
        </span>
      </label>
      <label
        class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              container-lined"
      >
        <input
          class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
          name="answer"
          type="radio"
          value="Environmental regulations and declining cod stocks"
        />
        <span
          class="input__label"
        >
          Environmental regulations and declining cod stocks
        </span>
      </label>
      <label
        class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              container-lined"
      >
        <input
          class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
          name="answer"
          type="radio"
          value="A cultural shift toward vegetarianism in the region"
        />
        <span
          class="input__label"
        >
          A cultural shift toward vegetarianism in the region
        </span>
      </label>
    </div>
    <button
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark multiple-choice__submit"
      type="button"
    >
      <span
        class="cta-button__text"
      >
        Check
      </span>
    </button>
  </form>
</div>
`;

exports[`MultipleChoice > updates styles for correct option 1`] = `
<label
  class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              multiple-choice__option--selected container-active
                multiple-choice__option--correct bg-[#63C96533] border-[#63C965]
                false"
>
  <input
    checked=""
    class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
    name="answer"
    type="radio"
    value="The community's preference for low-tech fishing traditions"
  />
  <span
    class="input__label"
  >
    The community's preference for low-tech fishing traditions
  </span>
</label>
`;

exports[`MultipleChoice > updates styles for correct option 2`] = `
<p
  class="bluedot-p not-prose multiple-choice__correct-msg"
>
  Correct! Quiz completed. 🎉
</p>
`;

exports[`MultipleChoice > updates styles for incorrect option 1`] = `
<label
  class="input flex items-center gap-2 cursor-pointer 
              multiple-choice__option flex items-center gap-2 p-4 hover:cursor-pointer
              multiple-choice__option--selected container-active
                false
                multiple-choice__option--incorrect bg-[#FF636333] border-[#FF6363]"
>
  <input
    checked=""
    class="input--radio size-6 accent-bluedot-normal rounded cursor-pointer"
    name="answer"
    type="radio"
    value="Rising consumer demand for fish with more Omega-3s"
  />
  <span
    class="input__label"
  >
    Rising consumer demand for fish with more Omega-3s
  </span>
</label>
`;

exports[`MultipleChoice > updates styles for incorrect option 2`] = `
<p
  class="bluedot-p not-prose multiple-choice__incorrect-msg"
>
  Try again. 🤔
</p>
`;
